# Irodori-TTS-Lite

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
example/: run_tts.py
irodori_tts_lite/: __init__.py  checkpoint_loader.py  fused_int4_linear.py  packed_conv.py  packed_linear.py  quant_utils.py  streaming_int2_linear.py  streaming_linear.py  weights.py
tools/: measure_peak_memory.py  quantize_dacvae_poc.py  repack_to_g64.py  requantize_dit_ffn_2bit.py
weights/: dit_int4.safetensors
