[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "irodori-tts-lite"
version = "0.1.0"
description = "Int4-quantized TTS DiT inference runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.4",
    "triton>=3.0",
    "safetensors>=0.4",
    "huggingface_hub>=0.24",
]

[project.optional-dependencies]
infer = [
    "pyopenjtalk",
]

[tool.setuptools.packages.find]
include = ["irodori_tts_lite*"]
