[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "irodori-tts-lite"
version = "0.1.0"
description = "Int4-quantized TTS DiT inference runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# int4 kernels, GPTQ/RTN unpack-dequant, PackedRTNLinear/PackedEmbedding and the
# int4 conv layers all come from the shared onecomp-runtime package (which pulls
# torch/triton/safetensors transitively). This repo keeps only the TTS-specific
# checkpoint loader + monkey-patch glue.
dependencies = [
    "onecomp-runtime @ git+https://github.com/kizuna-intelligence/onecompression-runtime@main",
    "huggingface_hub>=0.24",
]

[project.optional-dependencies]
infer = [
    "pyopenjtalk",
]

[tool.setuptools.packages.find]
include = ["irodori_tts_lite*"]
